--- a/static/style.css
+++ b/static/style.css
@@ -7,31 +7,31 @@ body {
 
 #box1{
 	/*background-color: white;*/
-	margin-left: auto;
-  	margin-right: auto;
+/*	  margin-left: auto;
+  	margin-right: auto;*/
 
 }
 
 .jumbotron{
 	background-color: rgba(0,0,0,0.7);
-	margin-left: auto;
-  	margin-right: auto;
-  	text-align: center;
+/*	margin-left: auto;
+  margin-right: auto;*/
+  text-align: center;
 	  
 }
 
-#outerindex {
+/*#outerindex {
     margin-left: auto;
     margin-right: auto;
     margin: 0;
-    position: absolute;
+    position: relative;
     top: 40%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+/*    left: 25%;*/
+/*    -ms-transform: translate(-30%, -30%);
+    transform: translate(-30%, -30%);*/
 
 
-}
+}*/
 
 #xray_img{
 	margin-left: auto;
@@ -48,4 +48,13 @@ body {
     width: 100%;
     max-width: none;
   }
+}
+
+#spinner{
+  display: none;
+}
+
+.example_imgs{
+    width: 90%;
+    height: 400px;
 }
