--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,8 @@
     <title>Pneumonia Diagnosis</title>
   </head>
   <body>
-    <div id='outerindex' class="container">
-      <div class="jumbotron" >
+    <div id='outerindex' class="container-fluid row justify-content-center">
+      <div class="jumbotron col-lg-8" >
         
         <h1>Pneumonia Diagnosis</h1>
         <h5> Upload the x-ray image to check for Pneumonia with a Deep learning Model trained with PyTorch</h5>
@@ -30,9 +30,15 @@
                 <div class="custom-file">
                   <input type="file" class="custom-file-input" id="inputGroupFile01" aria-describedby="inputGroupFileAddon01" name=photo onchange="readURL(this);" >
                   <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                  
                 </div>
               </div>
+
+              <!-- Default unchecked -->
+              <div class="custom-control custom-checkbox">
+                  <input name='is_cnn_feat' type="checkbox" class="custom-control-input" id="defaultUnchecked">
+                  <label class="custom-control-label" for="defaultUnchecked">CNN Features</label>
+              </div>
+
               </form>
               <div id='img_box'>
                 <img id="xray_img" class=".img-fluid" style="max-width: 100%; height: auto;" >
@@ -42,12 +48,39 @@
           </div> 
           <br>
           <h5>Download a 3 channel X-Ray image from the internet or directly checkout the following examples.</h5>
+          <div class="row justify-content-end">
+            <div class="col-6"><div id ='spinner' class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
+          </div></div>
+          </div>
+          
           <br>
+
           <div class="row">
-            <!-- "window.location.href='{{ url_for( 'submit_example', example='normal' ) }}';" -->
-            <div class="col"><button onclick="window.location.href='{{ url_for( 'submit_example', example='normal' ) }}';" type="button" class="btn btn-dark"> Normal XRay Example</button></div>
-            <div class="col"><button onclick="window.location.href='{{ url_for( 'submit_example', example='pseumonia' ) }}';" type="button" class="btn btn-dark">Pneumonia XRay Example</button></div>
-          </div> 
+            <div class="col">
+              <h3>NORMAL</h3>
+              <hr>
+              <img type="button" onclick="enable_spinner(); window.location.href='{{ url_for( 'submit_example', example='n1' ) }}'; " src="{{ url_for('static', filename='example_imgs/n1.jpg')}}" class=" rounded float-left example_imgs" id='n1'>
+              <br>
+              <img type="button" onclick="enable_spinner(); window.location.href='{{ url_for( 'submit_example', example='n2' ) }}'; " src="{{ url_for('static', filename='example_imgs/n2.jpeg')}}" class=" rounded float-left example_imgs" id='n2'>
+              <br>
+              <img type="button" onclick="enable_spinner(); window.location.href='{{ url_for( 'submit_example', example='n3' ) }}'; " src="{{ url_for('static', filename='example_imgs/n3.jpg')}}" class=" rounded float-left example_imgs" id='n3'>
+                
+            </div>
+
+            <div class="col">
+              <h3>PNEUMONIA</h3>
+              <hr>
+              <img type="button" onclick="enable_spinner(); window.location.href='{{ url_for( 'submit_example', example='p1' ) }}';" src="{{ url_for('static', filename='example_imgs/p1.jpg')}}" class=" rounded float-right example_imgs" id='p1'>
+              <br>
+              <img type="button" onclick="enable_spinner(); window.location.href='{{ url_for( 'submit_example', example='p2' ) }}';" src="{{ url_for('static', filename='example_imgs/p2.jpg')}}" class=" rounded float-right example_imgs" id='p2'>
+              <br>
+              <img type="button" onclick="enable_spinner(); window.location.href='{{ url_for( 'submit_example', example='p3' ) }}';" src="{{ url_for('static', filename='example_imgs/p3.jpeg')}}" class=" rounded float-right example_imgs" id='p3'>
+            </div>
+          </div>
+
+
+
       </div>    
     </div>
 
@@ -71,6 +104,12 @@
             reader.readAsDataURL(input.files[0]);
         }
     }
+
+    function enable_spinner() {
+            // document.getElementById('spinner').removeAttribute('disabled');
+            document.getElementById("spinner").style.display = "block";
+            
+        }
     </script>
   </body>
 </html>
