--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('bg.png'), url('bg2.png');
+  background-image: url('bg2.jpg');
   background-size: cover;
   background-repeat: repeat-x, repeat;
   color:white;
@@ -55,6 +55,6 @@ body {
 }
 
 .example_imgs{
-    width: 90%;
+    width: 100%;
     height: 400px;
 }
